# potret

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  icon-preview.html  index.html  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: README.md
landing/: .vercelignore  DESIGN_SPEC.md  SEO_HEAD.html  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vercel.json
landing/public/: robots.txt
landing/src/: App.tsx
landing/src/components/: ApertureShader.tsx  Grain.tsx  Logo.tsx  Nav.tsx
landing/src/lib/: useReveal.ts
landing/src/sections/: Download.tsx  Features.tsx  Footer.tsx  Hero.tsx  Support.tsx  Workflow.tsx
landing/src/styles/: global.css
scripts/: install-local.sh  publish-homebrew-cask.sh  release.sh  setup-signing-cert.sh
src/: App.tsx  index.css  main.tsx  utils.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  native_capture.rs
src/components/: AnnotationCanvas.tsx  BackgroundTool.tsx  CaptureHome.tsx  CaptureOverlay.tsx  CapturePopupWindow.tsx  CaptureSelector.tsx  CornerHistoryWindow.tsx  HistoryPanel.tsx  HistoryPopupWindow.tsx  PinnedView.tsx  Settings.tsx  Toast.tsx
src/hooks/: useHistory.ts
src/remotion/: PotretPromo.tsx  Root.tsx  style.css
src/utils/: time.ts
