[package]
name = "potret"
version = "0.2.6"
description = "Potret — open source screenshot & annotation tool"
authors = ["Potret Contributors"]
license = "MIT"
edition = "2021"

[lib]
name = "potret_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-drag = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = { version = "0.25", features = ["png", "jpeg"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["time"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
